--- a/package.json
+++ b/package.json
@@ -26,11 +26,17 @@
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "linq": "^3.2.2",
+    "moment": "^2.24.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.6"
+    "nodemailer": "^6.4.6",
+    "nodemailer-sendgrid": "^1.0.3",
+    "sequelize": "^5.21.6",
+    "swagger-ui-express": "^4.1.4",
+    "underscore": "^1.10.2"
   }
 }
