--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "goldenspoon-api",
   "version": "1.0.0",
   "description": "\u0016API for golden spoon web application.",
-  "main": "index.js",
+  "main": "src/Server.ts",
   "scripts": {
-    "start": "node API/server.js",
-    "dev": "nodemon API/server.js",
-    "build": "tsc-p ."
+    "start": "ts-node-dev --respawn src/Server.ts",
+    "build": "tsc",
+    "dev": "nodemon --exec ts-node src/Server.ts"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,10 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/bluebird": "^3.5.30",
     "@types/cors": "^2.8.6",
+    "@types/sequelize": "^4.28.8",
+    "@types/validator": "^13.0.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -35,8 +38,11 @@
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.6",
     "nodemailer-sendgrid": "^1.0.3",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.6",
+    "sequelize-typescript": "^1.1.0",
     "swagger-ui-express": "^4.1.4",
+    "ts-node-dev": "^1.0.0-pre.44",
     "underscore": "^1.10.2"
   }
 }
