--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/node": "^13.11.1",
+    "babel-preset-env": "^1.7.0",
     "nodemon": "^2.0.3",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
