--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.0.1",
     "@types/bluebird": "^3.5.30",
     "@types/cors": "^2.8.6",
     "@types/sequelize": "^4.28.8",
@@ -34,6 +35,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "linq": "^3.2.2",
+    "mailgun-js": "^0.22.0",
     "moment": "^2.24.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
