--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.6",
-    "@types/node": "^13.11.1",
+    "@types/node": "^13.13.2",
     "babel-preset-env": "^1.7.0",
     "nodemon": "^2.0.3",
-    "ts-node": "^8.8.2",
+    "ts-node": "^8.9.0",
     "typescript": "^3.8.3"
   },
   "dependencies": {
@@ -32,6 +32,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "expres": "0.0.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
