--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "sequelize-typescript": "^1.1.0",
     "swagger-ui-express": "^4.1.4",
     "ts-node-dev": "^1.0.0-pre.44",
+    "ts-node": "^8.9.0",
+    "typescript": "^3.8.3",
     "underscore": "^1.10.2"
   }
 }
