DB Heroku setup

--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ SENDGRID_API_KEY = SG.Sjdd-YLlRZm_K2i0llOm7g.b-B67gyz_Mz7r7zFOtpAuiph0GgevicMgZy
 
 #Databse 
 
-DATABASE_TABLE_NAME = thegoldenspoon
-DATABASE_USERNAME = goldspoon 
-DATABASE_PASSWORD = ys63w447YHvOlWq4
-DATABASE_HOST = localhost 
+DATABASE_HOST = sql7.freemysqlhosting.net 
+DATABASE_TABLE_NAME = sql7335610
+DATABASE_USERNAME = sql7335610
+DATABASE_PASSWORD = UlbQnrBWiE
 DATABASE_DIALECT = mysql
