--- a/.env
+++ b/.env
@@ -17,3 +17,5 @@ DATABASE_TABLE_NAME = sql7335610
 DATABASE_USERNAME = sql7335610
 DATABASE_PASSWORD = UlbQnrBWiE
 DATABASE_DIALECT = mysql
+
+PORT = 5000
