--- a/.env
+++ b/.env
@@ -17,5 +17,6 @@ DATABASE_TABLE_NAME = sql7335610
 DATABASE_USERNAME = sql7335610
 DATABASE_PASSWORD = UlbQnrBWiE
 DATABASE_DIALECT = mysql
+DATABASE_PORT = 3306
 
 PORT = 5000
