--- a/.env
+++ b/.env
@@ -12,11 +12,10 @@ SENDGRID_API_KEY = SG.Sjdd-YLlRZm_K2i0llOm7g.b-B67gyz_Mz7r7zFOtpAuiph0GgevicMgZy
 
 #Databse 
 
-DATABASE_HOST = sql7.freemysqlhosting.net 
-DATABASE_TABLE_NAME = sql7335610
-DATABASE_USERNAME = sql7335610
-DATABASE_PASSWORD = UlbQnrBWiE
+DATABASE_HOST = eu-cdbr-west-03.cleardb.net
+DATABASE_TABLE_NAME = heroku_b2ae1805acdd843
+DATABASE_USERNAME = b7a90df9e239c2
+DATABASE_PASSWORD = 0783111c 
 DATABASE_DIALECT = mysql
 DATABASE_PORT = 3306
 
-PORT = 5000
