made app link dynamic

--- a/.env
+++ b/.env
@@ -19,3 +19,6 @@ DATABASE_PASSWORD = 0783111c
 DATABASE_DIALECT = mysql
 DATABASE_PORT = 3306
 
+#Public
+
+APP_URL = "https://thegoldenspoon-web.herokuapp.com"
