--- a/.env
+++ b/.env
@@ -13,12 +13,12 @@ SENDGRID_API_KEY = SG.Sjdd-YLlRZm_K2i0llOm7g.b-B67gyz_Mz7r7zFOtpAuiph0GgevicMgZy
 #Databse 
 
 DATABASE_HOST = eu-cdbr-west-03.cleardb.net
-DATABASE_TABLE_NAME = heroku_b2ae1805acdd843
-DATABASE_USERNAME = b7a90df9e239c2
-DATABASE_PASSWORD = 0783111c 
+DATABASE_TABLE_NAME = heroku_7cf11dd7d1ff7dc
+DATABASE_USERNAME = b1ffa9cb5c13eb
+DATABASE_PASSWORD = a36a7e61 
 DATABASE_DIALECT = mysql
 DATABASE_PORT = 3306
 
 #Public
 
-APP_URL = "https://thegoldenspoon-web.herokuapp.com"
+APP_URL = http:localhost:3000
