--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expres": "0.0.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
@@ -44,8 +45,8 @@
     "sequelize": "^5.21.6",
     "sequelize-typescript": "^1.1.0",
     "swagger-ui-express": "^4.1.4",
-    "ts-node-dev": "^1.0.0-pre.44",
     "ts-node": "^8.9.0",
+    "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3",
     "underscore": "^1.10.2"
   }
