--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Almir Mulalic",
   "license": "ISC",
   "devDependencies": {
+    "@prisma/cli": "^2.0.0-beta.4",
     "@types/express": "^4.17.6",
     "@types/node": "^13.13.2",
     "babel-preset-env": "^1.7.0",
@@ -23,6 +24,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@prisma/client": "^2.0.0-beta.4",
     "@sendgrid/mail": "^7.0.1",
     "@types/bluebird": "^3.5.30",
     "@types/cors": "^2.8.6",
