--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "babel-preset-env": "^1.7.0",
     "nodemon": "^2.0.3",
     "ts-node": "^8.9.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "@prisma/engine-core": "^2.0.110",
+    "@prisma/generator-helper": "^0.0.40",
+    "chalk": "^3.0.0"
   },
   "dependencies": {
     "@prisma/client": "^2.0.0-beta.5",
@@ -50,6 +53,9 @@
     "ts-node": "^8.9.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3",
-    "underscore": "^1.10.2"
+    "underscore": "^1.10.2",
+    "@prisma/engine-core": "^2.0.110",
+    "@prisma/generator-helper": "^0.0.40",
+    "chalk": "^3.0.0"
   }
 }
