--- a/package.json
+++ b/package.json
@@ -1,53 +1,54 @@
 {
-  "name": "goldenspoon-api",
-  "version": "1.0.0",
-  "description": "\u0016API for golden spoon web application.",
-  "main": "src/Server.ts",
-  "scripts": {
-    "start": "ts-node-dev --respawn src/Server.ts",
-    "build": "tsc",
-    "dev": "nodemon --exec ts-node src/Server.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/almulalic/thegoldenspoon-api"
-  },
-  "author": "Almir Mulalic",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.6",
-    "@types/node": "^13.13.2",
-    "babel-preset-env": "^1.7.0",
-    "nodemon": "^2.0.3",
-    "ts-node": "^8.9.0",
-    "typescript": "^3.8.3"
-  },
-  "dependencies": {
-    "@sendgrid/mail": "^7.0.1",
-    "@types/bluebird": "^3.5.30",
-    "@types/cors": "^2.8.6",
-    "@types/sequelize": "^4.28.8",
-    "@types/validator": "^13.0.0",
-    "bcrypt": "^4.0.1",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "expres": "0.0.5",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "moment": "^2.24.0",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.1.0",
-    "nodemailer-sendgrid": "^1.0.3",
-    "pg": "^8.0.3",
-    "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.21.6",
-    "sequelize-typescript": "^1.1.0",
-    "swagger-ui-express": "^4.1.4",
-    "ts-node": "^8.9.0",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3",
-    "underscore": "^1.10.2"
-  }
+   "name": "goldenspoon-api",
+   "version": "1.0.0",
+   "description": "\u0016API for golden spoon web application.",
+   "main": "src/Server.ts",
+   "scripts": {
+      "start": "ts-node src/index.ts",
+      "build": "tsc",
+      "dev": "nodemon --exec ts-node src/Server.ts"
+   },
+   "repository": {
+      "type": "git",
+      "url": "https://github.com/almulalic/thegoldenspoon-api"
+   },
+   "author": "Almir Mulalic",
+   "license": "ISC",
+   "devDependencies": {
+      "@types/express": "^4.17.6",
+      "@types/node": "^8.0.29",
+      "babel-preset-env": "^1.7.0",
+      "nodemon": "^2.0.3",
+      "ts-node": "3.3.0",
+      "typescript": "3.3.3333"
+   },
+   "dependencies": {
+      "@sendgrid/mail": "^7.0.1",
+      "@types/bluebird": "^3.5.30",
+      "@types/cors": "^2.8.6",
+      "@types/sequelize": "^4.28.8",
+      "@types/validator": "^13.0.0",
+      "bcrypt": "^4.0.1",
+      "body-parser": "^1.19.0",
+      "cors": "^2.8.5",
+      "dotenv": "^8.2.0",
+      "expres": "0.0.5",
+      "express": "^4.17.1",
+      "jsonwebtoken": "^8.5.1",
+      "lodash": "^4.17.15",
+      "moment": "^2.24.0",
+      "mysql": "^2.14.1",
+      "mysql2": "^2.1.0",
+      "nodemailer-sendgrid": "^1.0.3",
+      "pg": "^8.0.3",
+      "reflect-metadata": "^0.1.10",
+      "sequelize": "^5.21.6",
+      "sequelize-typescript": "^1.1.0",
+      "swagger-ui-express": "^4.1.4",
+      "ts-node": "^8.9.0",
+      "ts-node-dev": "^1.0.0-pre.44",
+      "typeorm": "0.2.24",
+      "typescript": "^3.8.3",
+      "underscore": "^1.10.2"
+   }
 }
