--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
       "ts-node": "^8.9.0",
       "ts-node-dev": "^1.0.0-pre.44",
       "typeorm": "0.2.24",
+      "typeorm-plus": "0.0.58",
       "typescript": "^3.8.3",
       "underscore": "^1.10.2"
    }
