--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
       "@types/validator": "^13.0.0",
       "bcrypt": "^4.0.1",
       "body-parser": "^1.19.0",
+      "class-transformer": "^0.2.3",
       "cors": "^2.8.5",
       "dotenv": "^8.2.0",
+      "es6-shim": "^0.35.5",
       "expres": "0.0.5",
       "express": "^4.17.1",
       "jsonwebtoken": "^8.5.1",
@@ -41,7 +43,7 @@
       "mysql2": "^2.1.0",
       "nodemailer-sendgrid": "^1.0.3",
       "pg": "^8.0.3",
-      "reflect-metadata": "^0.1.10",
+      "reflect-metadata": "^0.1.13",
       "sequelize": "^5.21.6",
       "sequelize-typescript": "^1.1.0",
       "swagger-ui-express": "^4.1.4",
