package.json typescript sync

--- a/.env
+++ b/.env
@@ -17,10 +17,10 @@ SENDGRID_API_KEY = SG.Sjdd-YLlRZm_K2i0llOm7g.b-B67gyz_Mz7r7zFOtpAuiph0GgevicMgZy
 
 #Databse 
 
-DATABASE_HOST = eu-cdbr-west-03.cleardb.net
-DATABASE_TABLE_NAME = heroku_7cf11dd7d1ff7dc
-DATABASE_USERNAME = b1ffa9cb5c13eb
-DATABASE_PASSWORD = a36a7e61 
+DATABASE_HOST = us-cdbr-east-03.cleardb.com
+DATABASE_TABLE_NAME = heroku_124147cbc6e7932
+DATABASE_USERNAME = b2a57ea95ed4b0
+DATABASE_PASSWORD = 943b8258 
 DATABASE_DIALECT = mysql
 DATABASE_PORT = 3306
 
