--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,13 +1,13 @@
 {
   "name": "default",
   "type": "mysql",
-  "host": "eu-cdbr-west-03.cleardb.net",
+  "host": "us-cdbr-east-03.cleardb.com",
   "port": 3306,
-  "username": "b1ffa9cb5c13eb",
-  "password": "a36a7e61",
-  "database": "heroku_7cf11dd7d1ff7dc",
+  "username": "b2a57ea95ed4b0",
+  "password": "943b8258",
+  "database": "heroku_124147cbc6e7932",
   "synchronize": true,
-  "logging": false,
+  "logging": true,
   "entities": ["src/Database/Entities/**/*.ts"],
   "migrations": ["src/Database/Migrations/**/*.ts"],
   "subscribers": ["src/Database/Subscribers/**/*.ts"],
