--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "goldenspoon-api",
   "version": "1.3.0",
-  "description": "\u0016API for golden spoon web application.",
+  "description": "\u0016API for The Golden Spoon web application.",
   "main": "src/Server.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
@@ -19,8 +19,8 @@
     "@types/node": "^8.0.29",
     "babel-preset-env": "^1.7.0",
     "nodemon": "^2.0.3",
-    "ts-node": "3.3.0",
-    "typescript": "3.3.3333"
+    "ts-node": "^3.3.0",
+    "typescript": "^3.3.3333"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.0.1",
@@ -28,7 +28,7 @@
     "@types/cors": "^2.8.6",
     "@types/sequelize": "^4.28.8",
     "@types/validator": "^13.0.0",
-    "bcrypt": "^4.0.1",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
     "cors": "^2.8.5",
@@ -37,7 +37,7 @@
     "expres": "0.0.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "moment": "^2.24.0",
     "mysql": "^2.14.1",
     "mysql2": "^2.1.0",
@@ -47,11 +47,9 @@
     "sequelize": "^5.21.6",
     "sequelize-typescript": "^1.1.0",
     "swagger-ui-express": "^4.1.4",
-    "ts-node": "^8.9.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "typeorm": "0.2.24",
     "typeorm-plus": "0.0.58",
-    "typescript": "^3.8.3",
     "underscore": "^1.10.2"
   }
 }
